--- a/src/ukuithemecustomizerwindow/ukuithemecustomizerwindow.ui
+++ b/src/ukuithemecustomizerwindow/ukuithemecustomizerwindow.ui
@@ -20,11 +20,11 @@
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
+        <verstretch>27</verstretch>
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="globalTheme">
        <attribute name="title">
@@ -127,20 +127,20 @@
         <string>声音</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_9">
-        <item row="1" column="2">
-         <widget class="QToolButton" name="soundDel">
-          <property name="text">
-           <string>删除</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
+        <item row="0" column="1" colspan="3">
          <widget class="QListView" name="soundView"/>
         </item>
-        <item row="1" column="1">
+        <item row="3" column="2">
          <widget class="QToolButton" name="soundAdd">
           <property name="text">
            <string>添加</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QToolButton" name="soundDel">
+          <property name="text">
+           <string>删除</string>
           </property>
          </widget>
         </item>
@@ -225,6 +225,19 @@
         </item>
        </layout>
       </widget>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="logbox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>1</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
      </widget>
     </item>
    </layout>
