--- a/src/packagecreator/packagecreator.ui
+++ b/src/packagecreator/packagecreator.ui
@@ -37,10 +37,10 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="lineEdit_2"/>
+        <widget class="QLineEdit" name="version"/>
        </item>
        <item row="2" column="1">
-        <widget class="QLineEdit" name="lineEdit_3"/>
+        <widget class="QLineEdit" name="maintainer"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
@@ -57,7 +57,7 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="name"/>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_4">
@@ -67,7 +67,7 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QTextEdit" name="textEdit"/>
+        <widget class="QTextEdit" name="description"/>
        </item>
       </layout>
      </widget>
