--- a/src/ukuithemecustomizerwindow/ukuithemecustomizerwindow.ui
+++ b/src/ukuithemecustomizerwindow/ukuithemecustomizerwindow.ui
@@ -32,6 +32,23 @@
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
         <item row="1" column="2">
+         <widget class="QToolButton" name="globalThemeAdd">
+          <property name="text">
+           <string>添加</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="4">
+         <widget class="QListView" name="globalThemeView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::MultiSelection</enum>
+          </property>
+          <property name="viewMode">
+           <enum>QListView::ListMode</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
          <widget class="QToolButton" name="globalThemeDel">
           <property name="text">
            <string>删除</string>
@@ -39,19 +56,9 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QToolButton" name="globalThemeAdd">
+         <widget class="QToolButton" name="globalThemeAddExisting">
           <property name="text">
-           <string>添加</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QListView" name="globalThemeView">
-          <property name="selectionMode">
-           <enum>QAbstractItemView::MultiSelection</enum>
-          </property>
-          <property name="viewMode">
-           <enum>QListView::ListMode</enum>
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -62,24 +69,31 @@
         <string>壁纸集</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="1" column="2">
+        <item row="1" column="3">
          <widget class="QToolButton" name="wallpaperCollectionDel">
           <property name="text">
            <string>删除</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="3">
+        <item row="0" column="0" colspan="4">
          <widget class="QListView" name="wallpaperCollectionView">
           <property name="selectionMode">
            <enum>QAbstractItemView::MultiSelection</enum>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="2">
          <widget class="QToolButton" name="wallpaperCollectionAdd">
           <property name="text">
            <string>添加</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QToolButton" name="wallpaperCollectionAddExisting">
+          <property name="text">
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -90,24 +104,31 @@
         <string>图标</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="1" column="2">
+        <item row="0" column="0" colspan="4">
+         <widget class="QListView" name="iconView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::MultiSelection</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
          <widget class="QToolButton" name="iconDel">
           <property name="text">
            <string>删除</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="2">
          <widget class="QToolButton" name="iconAdd">
           <property name="text">
            <string>添加</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QListView" name="iconView">
-          <property name="selectionMode">
-           <enum>QAbstractItemView::MultiSelection</enum>
+        <item row="1" column="1">
+         <widget class="QToolButton" name="iconAddExisting">
+          <property name="text">
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -119,23 +140,30 @@
        </attribute>
        <layout class="QGridLayout" name="gridLayout_5">
         <item row="1" column="2">
-         <widget class="QToolButton" name="cursorDel">
+         <widget class="QToolButton" name="cursorAdd">
           <property name="text">
-           <string>删除</string>
+           <string>添加</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="3">
+        <item row="0" column="0" colspan="4">
          <widget class="QListView" name="cursorView">
           <property name="selectionMode">
            <enum>QAbstractItemView::MultiSelection</enum>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QToolButton" name="cursorAdd">
+        <item row="1" column="3">
+         <widget class="QToolButton" name="cursorDel">
           <property name="text">
-           <string>添加</string>
+           <string>删除</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QToolButton" name="cursorAddExisting">
+          <property name="text">
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -146,24 +174,31 @@
         <string>声音</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_9">
-        <item row="0" column="1" colspan="3">
+        <item row="0" column="1" colspan="4">
          <widget class="QListView" name="soundView">
           <property name="selectionMode">
            <enum>QAbstractItemView::MultiSelection</enum>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
+        <item row="3" column="4">
+         <widget class="QToolButton" name="soundDel">
+          <property name="text">
+           <string>删除</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
          <widget class="QToolButton" name="soundAdd">
           <property name="text">
            <string>添加</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
-         <widget class="QToolButton" name="soundDel">
+        <item row="3" column="2">
+         <widget class="QToolButton" name="soundAddExisting">
           <property name="text">
-           <string>删除</string>
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -174,7 +209,21 @@
         <string>GTK风格</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_7">
+        <item row="0" column="0" colspan="4">
+         <widget class="QListView" name="gtkStyleView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::MultiSelection</enum>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="2">
+         <widget class="QToolButton" name="gtkStyleAdd">
+          <property name="text">
+           <string>添加</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
          <widget class="QToolButton" name="gtkStyleDel">
           <property name="text">
            <string>删除</string>
@@ -182,16 +231,9 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QToolButton" name="gtkStyleAdd">
+         <widget class="QToolButton" name="gtkStyleAddExisting">
           <property name="text">
-           <string>添加</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QListView" name="gtkStyleView">
-          <property name="selectionMode">
-           <enum>QAbstractItemView::MultiSelection</enum>
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -202,24 +244,31 @@
         <string>Qt风格</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_8">
-        <item row="1" column="2">
+        <item row="1" column="3">
          <widget class="QToolButton" name="qtStyleDel">
           <property name="text">
            <string>删除</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="0" column="0" colspan="4">
+         <widget class="QListView" name="qtStyleView">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::MultiSelection</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
          <widget class="QToolButton" name="qtStyleAdd">
           <property name="text">
            <string>添加</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QListView" name="qtStyleView">
-          <property name="selectionMode">
-           <enum>QAbstractItemView::MultiSelection</enum>
+        <item row="1" column="1">
+         <widget class="QToolButton" name="qtStyleAddExisting">
+          <property name="text">
+           <string>添加现有文件</string>
           </property>
          </widget>
         </item>
@@ -230,29 +279,15 @@
         <string>首选项</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_10">
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="lineEdit"/>
+        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>工作目录</string>
           </property>
          </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>本地软件源</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QCheckBox" name="checkBox">
-          <property name="text">
-           <string>开启至/etc/apt/source.list.d</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEdit"/>
         </item>
        </layout>
       </widget>
