--- a/src/globalthemecreator/globalthemecreator.ui
+++ b/src/globalthemecreator/globalthemecreator.ui
@@ -44,7 +44,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBox"/>
+        <widget class="QComboBox" name="wallpaperCollection"/>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="label_7">
@@ -54,14 +54,14 @@
         </widget>
        </item>
        <item row="8" column="1">
-        <widget class="QComboBox" name="qtNightStyle">
+        <widget class="QComboBox" name="qtStyle2">
          <property name="enabled">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="5" column="1">
-        <widget class="QComboBox" name="gtkStyle">
+        <widget class="QComboBox" name="gtkStyle1">
          <property name="frame">
           <bool>true</bool>
          </property>
@@ -85,7 +85,7 @@
         </widget>
        </item>
        <item row="7" column="1">
-        <widget class="QComboBox" name="qtStyle"/>
+        <widget class="QComboBox" name="qtStyle1"/>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label_5">
@@ -101,7 +101,7 @@
         <widget class="QComboBox" name="soundName"/>
        </item>
        <item row="6" column="1">
-        <widget class="QComboBox" name="gtkNightStyle">
+        <widget class="QComboBox" name="gtkStyle2">
          <property name="enabled">
           <bool>true</bool>
          </property>
